# Yieldflow_API

./: .gitignore  DEPENDENCY_MANAGEMENT.md  Dockerfile  Dockerfile.render  ENHANCED_DIVIDEND_FORECASTER_V2_SUMMARY.md  ENHANCED_DIVIDEND_FORECASTING_SUMMARY.md  ENHANCED_PORTFOLIO_OPTIMIZATION_SUMMARY.md  FRONTEND_BACKEND_INTEGRATION_REPORT.md  FRONTEND_PORTFOLIO_OPTIMIZATION_SUMMARY.md  NEWS_ENHANCED_PORTFOLIO_OPTIMIZATION_GUIDE.md  README.md  RENDER_DEPLOYMENT.md  UV_MIGRATION_GUIDE.md  YieldFlow_Financial_Models_Documentation.md  api_key_basic.json  api_key_enterprise.json  api_key_pro.json  comprehensive_endpoint_test.py  comprehensive_investment_assistant_tester.py  comprehensive_template_validator.py  create_api_key.py  docker-compose.yml  env.example  final_integration_test.py  final_test_results.json  frontend_test_final.py  init.sql  investment_assistant_test_report.json  main.py  mathematical_accuracy_tester.py  netlify.toml  next_steps.md  production_roadmap.md  pyproject.toml  real_world_data_validator.py  render.yaml  requirements-compiled.txt  requirements-dev.txt  requirements-prod.txt  requirements-uv.txt  (+12 more)
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: analytics.py  auth.py  charts.py  compliance.py  dividends.py  financials.py  insights.py  portfolio.py  query.py  ratios.py
app/api/endpoints/: financial.py
app/core/: config.py  database.py  deps.py  security.py
app/models/: __init__.py  database.py  financial.py  user.py
app/schemas/: financial.py  portfolio.py
app/services/: ai_insights.py  cache_service.py  data_provider.py  dividend_service.py  enhanced_dividend_forecaster.py  fast_investment_assistant.py  financial_analyzer.py  investment_assistant.py  live_investment_assistant.py  natural_language_query.py  news_sentiment_service.py  portfolio_optimizer.py  professional_dividend_service.py  professional_investment_assistant.py  ratio_calculator.py  simple_investment_assistant.py
app/utils/: exceptions.py
tests/: __init__.py  test_data_provider.py  test_financial_analyzer.py  test_ratio_calculator.py
yieldflow-frontend/: README.md  package.json
yieldflow-frontend/src/: App.tsx  index.css  setupTests.ts
yieldflow-frontend/src/components/: DividendAnalysis.tsx  FinancialDataTable.tsx  FinancialModelsDocumentation.tsx  Header.tsx  MetricsCard.tsx  PeerComparisonHeatMap.tsx  PortfolioOptimization.constants.ts  PortfolioOptimization.tsx  ProfessionalDemo.tsx  SmartQueryInterface.css  SmartQueryInterface.tsx  SnowflakeAnalysis.tsx  StatusIndicator.tsx
yieldflow-frontend/src/components/__tests__/: PortfolioOptimization.integration.test.tsx  PortfolioOptimization.test.tsx
yieldflow-frontend/src/components/common/: AnimatedDonut.tsx  KpiCard.tsx  RiskGauge.tsx  RiskTornado.tsx
yieldflow-frontend/src/services/: dividendService.ts  financialDataService.ts  portfolioService.ts
yieldflow-frontend/src/styles/: professional.css
