[project]
name = "yieldflow-api"
version = "0.1.0"
description = "Comprehensive FastAPI Financial Analytics API - From Data to Insights in One API Call"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "aiohttp>=3.9.1,<3.10.0",
    "aioredis>=2.0.1,<2.1.0",
    "alembic>=1.12.0,<1.13.0",
    "alpha-vantage>=2.3.1,<2.4.0",
    "asyncpg>=0.29.0,<0.30.0",
    "babel>=2.13.1,<3.0.0",
    "bcrypt>=4.1.0,<4.2.0",
    "celery>=5.3.4,<6.0.0",
    "email-validator>=2.1.0,<3.0.0",
    "fastapi>=0.104.0,<0.105.0",
    "flower>=2.0.1,<3.0.0",
    "forex-python>=1.8,<2.0.0",
    "fredapi>=0.5.1,<0.6.0",
    "greenlet>=3.0.1,<4.0.0",
    "httpx>=0.25.2,<0.26.0",
    "iso4217>=1.12.20230101,<2.0.0",
    "matplotlib>=3.8.0,<3.9.0",
    "numpy>=1.25.0,<2.0.0",
    "pandas>=2.1.0,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<1.8.0",
    "pillow>=10.1.0,<11.0.0",
    "plotly>=5.17.0,<6.0.0",
    "psycopg2-binary>=2.9.9,<2.10.0",
    "pydantic>=2.5.0,<2.6.0",
    "pydantic-settings>=2.1.0,<2.2.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "python-dotenv>=1.0.0,<1.1.0",
    "python-jose[cryptography]>=3.3.0,<3.4.0",
    "python-json-logger>=2.0.7,<3.0.0",
    "python-multipart>=0.0.6,<0.1.0",
    "redis>=5.0.1,<5.1.0",
    "scikit-learn>=1.3.0,<1.4.0",
    "scipy>=1.11.0,<1.12.0",
    "seaborn>=0.13.0,<0.14.0",
    "sentry-sdk>=1.38.0,<2.0.0",
    "slowapi>=0.1.9,<0.2.0",
    "sqlalchemy>=2.0.23,<2.1.0",
    "structlog>=23.2.0,<24.0.0",
    "uvicorn[standard]>=0.24.0,<0.25.0",
    "yfinance>=0.2.28,<0.3.0",
]
authors = [
    {name = "Yieldflow Team"},
]
keywords = ["financial", "analytics", "api", "fastapi", "quantitative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

[project.optional-dependencies]
dev = []

[tool.uv]
dev-dependencies = [
    "black>=23.11.0,<24.0.0",
    "flake8>=6.1.0,<7.0.0",
    "ipython>=8.17.0,<9.0.0",
    "isort>=5.12.0,<6.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.4.0,<10.0.0",
    "mypy>=1.7.0,<2.0.0",
    "pre-commit>=3.6.0,<4.0.0",
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
